--- a/FT_CSS.css
+++ b/FT_CSS.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family:'DragonHunter';
-    src:url(/DragonHunter.otf);
+    src:url(DragonHunter.otf);
     font-style: bold;
     font-weight: bold;
   }
