--- a/FT_CSS.css
+++ b/FT_CSS.css
@@ -8,22 +8,37 @@
 
 header
 {
-    font-family: 'DragonHunter';
-    font-weight: bold;
-    font-size: 2.5em;
-    color: rgb(103, 0, 0);
-    text-align: center;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    position: sticky;
+    top: 0;
     background-color: #DBC69F;
     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
-    padding: 30px;
+    width: 100%;
+    height: 100px;
+    z-index: 5;
 
+    view-timeline-name: scroll();
+    view-timeline-axis: block;
+
+    animation-timeline: scroll();
+    animation-name: shrink;
+
+    animation-range: 0% 100%;
+
+    
 }
 
 h1
 {
-    display: inline;
-    margin-top: 0px;
-    margin-left: 0px;
+    display: flex;
+    align-items: center;
+    position: sticky;
+    margin: auto;
+    font-size: 2.5em;
+    color: rgb(103, 0, 0);
+    font-family: 'DragonHunter';
 }
 
 h2
@@ -65,7 +80,15 @@ body
     margin-top: 50px;
     display: flex;
     justify-content: left;
+    
+    view-timeline-name: --image;
+    view-timeline-axis: block;
 
+    animation-timeline: --image;
+    animation-name: show;
+
+    animation-range: entry 0% cover 50%;
+    animation-fill-mode: both;
 }
 
 .NewsLeft div
@@ -87,6 +110,15 @@ body
     display: flex;
     justify-content: right;
     transition: 1s;
+
+    view-timeline-name: --image;
+    view-timeline-axis: block;
+
+    animation-timeline: --image;
+    animation-name: show;
+
+    animation-range: entry 0% cover 50%;
+    animation-fill-mode: both;
 }
 
 .NewsRight div
@@ -159,7 +191,6 @@ p
 
 .Timg
 {
-    position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -226,4 +257,33 @@ a
 {
     text-decoration: none;
     margin: auto;
+}
+
+@keyframes show {
+    from {
+        opacity: 0.2;
+        scale: 25%;
+    }
+
+    to {
+        opacity: 1;
+        scale: 100%;
+    }
+}
+
+@keyframes shrink {
+
+    0% {
+        margin-left: 0%;
+        height: 100px;
+        width: 100%;
+        border-radius: 0px 0px 0px 0px;
+    }
+
+    100% {
+        margin-left: 20%;
+        height: 60px;
+        width: 60%;
+        border-radius: 0px 0px 20px 20px;
+    }
 }
