--- a/FT_CSS.css
+++ b/FT_CSS.css
@@ -268,30 +268,14 @@ a
     margin: auto;
 }
 
-#video_background {
+.video_background {
     position: fixed;
-    bottom: 0px;
-    right: 0px;
     opacity: 0.4;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -1000;
-    overflow: hidden;
-    }
-
-#video_pattern {
-    background:#fff;
-    position: fixed;
-    opacity: 0.8;
-    left: 0px;
-    top: 0px;
-    width: 100%;
     height: 100%;
-    z-index: 1;
+    width: 100%;
+    object-fit: cover;
+    z-index: -10;
     }
-
 
 @keyframes show {
     from {
