--- a/FT_CSS.css
+++ b/FT_CSS.css
@@ -277,6 +277,60 @@ a
     z-index: -10;
     }
 
+
+.news_list
+    {
+        
+        display: grid;
+        gap: 30px;
+        grid-template-columns: 1fr 1fr 1fr;
+        height: 100%;
+        margin: 40px 0;
+        position: relative;
+        width: 100%;
+    }
+
+.news_container
+    {
+        background-color: white;
+        opacity: ;
+        margin: 0 30px 0 30px;
+        align-items: center;
+        cursor: pointer;
+        display: flex;
+        height: clamp(400px, 10vw + 360px, 560px);
+        justify-content: center;
+        position: relative;
+        width: auto;
+        mask: radial-gradient(5px at 5px 5px, transparent 98%, #000) -5px -5px;
+    }
+
+.item_image
+    {
+        background-position: top;
+        background-size: cover;
+        height: 75%;
+        left: 0;
+        position: absolute;
+        top: -10%;
+        transition: top 1s ease;
+        width: 100%;
+        z-index: -1;
+    }
+
+.item_blur
+    {
+        height: 100%;
+        position: absolute;
+        align-items: center;
+        background-color: #00000068;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        mask: radial-gradient(5px at 5px 5px, transparent 98%, #000) -5px -5px;
+        width: 100%;
+    }
+
 @keyframes show {
     from {
         opacity: 0.2;
