--- a/Index.css
+++ b/Index.css
@@ -20,13 +20,16 @@
 .video_background
  {
     position: fixed;
-
     height: 100%;
     width: 100%;
     object-fit: cover;
-    mask-image: url(https://raw.githubusercontent.com/AveysT/FaerunToday/refs/heads/main/IMG/EXTRA/News_IMG_Mask.png);
+    mask-image: url(https://raw.githubusercontent.com/AveysT/FaerunToday/refs/heads/main/IMG/EXTRA/Background_VID_Mask.png);
     mask-repeat: no-repeat;
-    mask-size: 100% 100%;
+    mask-mode: luminance;
+    mask-size: cover;
+    mask-position: center;
+    width: 100%;
+    height: 100%;
     z-index: -10;
 }
 
